<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="andi.anzanul.zikra.singlescreenapp.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="0sp">

            <!-- image and title -->
            <RelativeLayout
                android:id="@+id/BannerLayout"
                android:layout_width="match_parent"
                android:layout_height="220dp">

                <ImageView
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/banner" />

                <LinearLayout
                    android:id="@+id/OverlayLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/judulbackground"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="2dp"
                        android:fontFamily="sans-serif"
                        android:paddingLeft="@dimen/banner_padding"
                        android:text="@string/nama_perusahaan"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="0dp"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="@dimen/banner_padding"
                        android:text="@string/alamat"
                        android:textAlignment="center"
                        android:textColor="#fff" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/DetailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_seluruhnya"
                android:paddingRight="@dimen/padding_seluruhnya"
                android:paddingTop="@dimen/padding_seluruhnya">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="sans-serif-light"
                    android:text="Informasi"
                    android:textAllCaps="true"
                    android:textColor="@color/warnajudulteks"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/deskripsi_perusahaan" />

                <RelativeLayout
                    android:id="@+id/layout_deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                   >


                    <TextView
                        android:id="@+id/deksripsi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-light"
                        android:text="Deskripsi"
                        android:textAllCaps="true"
                        android:textColor="@color/warnajudulteks"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/icon_tlpn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/deksripsi"
                        android:tint="@color/colorPrimaryDark"
                        app:srcCompat="@drawable/ic_local_phone_black_24dp" />

                    <TextView
                        android:id="@+id/text_tlp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/deksripsi"
                        android:layout_marginLeft="5dp"
                        android:layout_toEndOf="@+id/icon_tlpn"
                        android:layout_toRightOf="@+id/icon_tlpn"
                        android:fontFamily="sans-serif"
                        android:text="@string/tlp" />

                    <ImageView
                        android:id="@+id/icon_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/icon_tlpn"
                        android:tint="@color/colorPrimaryDark"
                        app:srcCompat="@drawable/ic_email_black_24dp" />

                    <TextView
                        android:id="@+id/textEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/icon_tlpn"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/icon_email"
                        android:fontFamily="sans-serif"
                        android:text="@string/email" />

                    <ImageView
                        android:id="@+id/icon_web"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/icon_email"
                        android:tint="@color/colorPrimaryDark"
                        app:srcCompat="@drawable/ic_web_black_24dp" />

                    <TextView
                        android:id="@+id/textWeb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/icon_email"
                        android:layout_marginLeft="5dp"
                        android:layout_toEndOf="@+id/icon_email"
                        android:layout_toRightOf="@+id/icon_email"
                        android:fontFamily="sans-serif"
                        android:text="@string/website" />

                </RelativeLayout>


            </LinearLayout>


            <!-- Hours of operation -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="@dimen/padding_seluruhnya"
                android:paddingRight="@dimen/padding_seluruhnya"
                android:paddingTop="@dimen/padding_seluruhnya"
                android:text="Jam buka"
                android:textAllCaps="true"
                android:textColor="@color/warnajudulteks"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/Jambuka_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_seluruhnya"
                android:paddingRight="@dimen/padding_seluruhnya">


                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/day_1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/day_2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/day_3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/day_4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/day_5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/day_6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/day_7" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-light"
                        android:text="08.00-17.00" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-light"
                        android:text="08.00-17.00" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-light"
                        android:text="08.00-17.00" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-light"
                        android:text="08.00-17.00" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-light"
                        android:text="08.00-17.00" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-light"
                        android:text="Libur"
                        android:textColor="@android:color/holo_red_dark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-light"
                        android:text="Libur"
                        android:textColor="@android:color/holo_red_dark" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>